<resources>
    <string name="app_name">Pink</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sos">SOS</string>
    <string name="scream">Scream</string>
    <string name="pick_from_contacts">Pick From Contacts</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="exname">eg.John</string>
    <string name="excontact">eg.9876543210</string>
    <string name="view_emergency_contacts">View Emergency Contacts</string>
    <string name="save">Save</string>
    <string name="enter_emergency_contacts">Enter Emergency Contacts</string>
    <string name="sign_in">Sign in</string>


    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">9860266275</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">jayeshlilani36@gmail.com</string>
    <string name="firebase_password" translatable="false">incorrect123</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
