<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="womensafety.com.pink.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corners">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/name"
            android:textSize="26dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/exname"
            android:textColor="#000"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/contact"
            android:textSize="26dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_contact"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/excontact"
            android:inputType="phone"
            android:textColor="#000"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_e1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_contact"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Emergency Contact 1"
            android:textSize="26dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_e1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_e1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/excontact"
            android:inputType="phone"
            android:textColor="#000"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tv_e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_e1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Emergency Contact 2"
            android:textSize="26dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_e2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/excontact"
            android:inputType="phone"
            android:textColor="#000"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_e2"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="24dp" />

    </RelativeLayout>
</RelativeLayout>
