<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emergency"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="womensafety.com.pink.Emergency">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corners">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_emergency_contacts"
            android:textSize="22dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_margin="25dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <EditText
                android:id="@+id/et_add1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/enter_contact"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="24dp" />

            <Button
                android:id="@+id/btn_pick1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginLeft="5dp"
                android:layout_weight="4"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:text="+"
                android:textColor="#fff"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_number1"
            android:layout_margin="25dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <EditText
                android:id="@+id/et_add2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/enter_contact"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="24dp" />

            <Button
                android:id="@+id/btn_pick2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginLeft="5dp"
                android:layout_weight="4"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimary"
                android:text="+"
                android:textColor="#fff"
                android:textSize="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_number2"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="24dp" />
    </RelativeLayout>


</RelativeLayout>
